[gd_scene load_steps=4 format=3 uid="uid://cy7qxgknrqfff"]

[ext_resource type="Script" path="res://Scenes/warp_zone_pair.gd" id="1_1oxgv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fbxp0"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uv35h"]
size = Vector2(40, 40)

[node name="WarpZonePair" type="Node2D"]
script = ExtResource("1_1oxgv")

[node name="Zone1" type="Area2D" parent="."]
position = Vector2(-480, 0)
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone1"]
rotation = -1.5708
shape = SubResource("RectangleShape2D_fbxp0")

[node name="DirectionMarker" type="Marker2D" parent="Zone1"]
position = Vector2(-30, 0)

[node name="Zone2" type="Area2D" parent="."]
position = Vector2(480, 0)
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone2"]
rotation = 1.5708
shape = SubResource("RectangleShape2D_uv35h")

[node name="DirectionMarker" type="Marker2D" parent="Zone2"]
position = Vector2(30, 0)

[connection signal="body_entered" from="Zone1" to="." method="_on_zone_1_body_entered"]
[connection signal="body_entered" from="Zone2" to="." method="_on_zone_2_body_entered"]
